@@ -6,9 +6,13 @@
 
 #include "ZColor.h"
 
+//______________________________________________________________________________
+//
+// Color class using RGBA float quadruple.
+
 ClassImp(ZColor);
 
 ostream& operator<<(ostream& s, ZColor& c)
 {
-  return s <<c[0]<<","<<c[1]<<","<<c[2]<<","<<c[3];
+  return s << c[0] <<","<< c[1] <<","<< c[2] <<","<< c[3];
 }
